updated index.html & added styles to landing page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,35 @@
   </head>
   <body>
 
-
-
+ <!-- Start of Landing Page -->
+   <div class="container landing-page">
+    <div class="container menu">
+        <div class="game-title">
+            <h3 class="h3-title">Snap Cards</h3>
+        </div>
+        <div class="player-info">
+            <h5 class="question">Match all the pairs to win the game!!</h5>
+        </div>
+        <div class="game-snapshot">
+            <img>
+        </div>
+        <div class="player-info">
+            <h5 class="question">Ready to Play?</h5>
+        </div>
+            
+            <h5 class="question">Type your name below and press Submit</h5>
+            <br>
+            <form action="name" method="GET">
+                <input type="text" name="playerName" id = "playerName" class="inputBox">
+               
+            </form>
+            <br><br>
+            <button class="btn btn-danger btn-round-lg" onclick="getPlayerName()">Submit</button>
+        </div>
+    </div>
+  </div>
+   <!-- End of Landing Page -->
+<!-- Start Of Game Page -->
 
 
 
