updated index.html to include player information seciton and styles for it

--- a/index.html
+++ b/index.html
@@ -53,9 +53,29 @@
 <!-- Start Of Game Page -->
 <div class="game-page">
     <div class="game-page-content">
+        <div class="container game-details">
+            <h3 class="game-title">Player : <span id="playerName"></span></h3>
+                <div class="game-container">
+                    <div class="game-info-container">            
+                        <div class="game-info">
+                            Time: <span id ="time-remaining">100</span>
+                         </div>
+                        <div class="game-info">
+                            Flips: <span id ="flips">0</span>
+                        </div>
+                        <div class="game-info">
+                            Rating:
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+        </div>
 
 
-    
  <div class="card-game">
     <div class="game-container">
         <div class="card">
