added js to get player name from landing screen and add to output in game page, created audiocontroller class for all audio and added the functions to call them when ready

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="container game-details">
-            <h3 class="game-title">Player : <span id="playerName"></span></h3>
+            <h3 class="game-title">Player : <span id="gamerId"></span></h3>
                 <div class="game-container">
                     <div class="game-info-container">            
                         <div class="game-info">
