--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
     <!-- JS -->
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js" async></script>
     
     <title>Snap Cards</title>
   </head>
   <body>
 
  <!-- Start of Landing Page -->
-   <div class="container landing-page">
+   <div class="container landing-page" id="landing-page">
     <div class="container menu">
         <div class="game-title">
             <h3 class="h3-title">Snap Cards</h3>
@@ -51,7 +51,7 @@
   </div>
    <!-- End of Landing Page -->
 <!-- Start Of Game Page -->
-<div class="game-page">
+<div class="game-page" id="game-page">
     <div class="game-page-content">
     
     <!-- Start Game Overlay -->
