--- a/index.html
+++ b/index.html
@@ -66,6 +66,24 @@
             <div class="overlays-small"><p>You found all the pairs</p>
                 <p>It only took you <span id="totalMoves"> </span> clicks</p>
                 <p>And you did it in only <span id="timeTaken"> </span> seconds</p>   
+                <p>Your rating is </p><ul class="stars-full">
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                </ul>
+
+                <ul class="stars-med">
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i>
+                </ul>
+
+                <ul class="stars-low">
+                    <li><i class="fa fa-star"></i></li>
+                    
+                </ul>
             </div>
             <button id="retry" type="button" class ="btn btn-danger btn-round-lg" onclick="startGame()"> Go Again </button>
         </div>
@@ -73,7 +91,7 @@
         <!-- Out of Time Overlay  -->
         <div class="overlays" id="out-of-time">
            <p> You Ran Out of Time!!</p><br><br>
-            Game over!!
+           <p> Game over!!</p>
             <button id="retry" type="button" class ="btn btn-danger btn-round-lg" onClick="startGame()">Retry</button>
         </div>
 
@@ -96,6 +114,7 @@
                                 <li><i class="fa fa-star"></i></li>
                                 <li><i class="fa fa-star"></i></li>
                             </ul>
+
                         </div>
                     </div>
                 </div>
