--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="overlays-small"><p>You found all the pairs</p>
                 <p>It only took you <span id="totalMoves"> </span> clicks</p>
                 <p>And you did it in only <span id="timeTaken"> </span> seconds</p>   
-                <p>Your rating is </p><ul class="stars-full">
+                <ul class="stars-full">
                     <li><i class="fa fa-star"></i></li>
                     <li><i class="fa fa-star"></i></li>
                     <li><i class="fa fa-star"></i></li>
