--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
         
       <!-- Winning Overlay --> 
         <div class="overlays" id="winner">
-           <h2> Congrats!! You have Won!!</h2> 
+            <div class="winningOver">
+           <h2 id ="youWon"> Congrats!! You have Won!!</h2> 
             <div class="overlays-small"><p>You found all the pairs</p>
                 <p>It only took you <span id="totalMoves"> </span> clicks</p>
                 <p>And you did it in only <span id="timeTaken"> </span> seconds</p>   
                
             </div>
             <button id="retry" type="button" class ="btn btn-danger btn-round-lg" onclick="startGame()"> Go Again </button>
+        </div>
         </div>
 
         <!-- Out of Time Overlay  -->
