--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           
             </div>
             <button id="retry" type="button" class ="btn btn-danger btn-round-lg" onclick="startGame()"> Go Again </button>
+              <button id="retry" type="button" class ="btn btn-danger btn-round-lg" onClick="window.location.href='index.html'">I've had Enough</button>
         </div>
         </div>
 
