--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h5 class="question">Match all the pairs within the time limit to win the game!!</h5>
         </div>
         <div class="game-snapshot">
-            <img class="preview" src="assets/images/gamepreview.JPG">
+            <img class="preview" src="https://res.cloudinary.com/pysched/image/upload/v1583235669/images/gamepreview_xhuj7r.jpg">
         </div>
         <div class="player-info">
             <h5 class="question">Ready to Play?</h5>
