--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <p>And you did it in only <span id="timeTaken"> </span> seconds</p>
 
                     </div>
-                    <button id="retry" type="button" class="btn btn-danger btn-round-lg" onclick="startGame()"> Go Again </button>
+                    <button id="retry" type="button" class="btn btn-danger btn-round-lg" onClick="startGame()">I want to try again</button>
                     <button id="retry" type="button" class="btn btn-danger btn-round-lg" onClick="window.location.href='index.html'">I've had Enough</button>
                 </div>
             </div>
@@ -98,14 +98,7 @@
                             Flips: <span id="flips">0</span>
                         </div>
                         <div class="game-info">
-                            <ul class="stars">
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                            </ul>
-
+                            <button id="retry" type="button" class="btn btn-danger btn-round-lg" onClick="window.location.href='index.html'">I've had Enough</button>
                         </div>
                     </div>
                 </div>
